Fixed colorpicker input overflowing

--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -100,7 +100,7 @@
         display: inline-block;
     }
 
-    input:not(.settings-param-toggle), textarea, select, .collection-list ul {
+    input:not(.settings-param-toggle), textarea, select, .collection-list ul, .colorpicker {
         width: 250px;
     }
 
